--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@uiw/codemirror-theme-sublime": "^4.23.5",
     "@uiw/react-codemirror": "^4.23.5",
     "axios": "^1.7.7",
+    "phaser": "^3.86.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
